--- a/index.html
+++ b/index.html
@@ -70,9 +70,12 @@
       const cnpj = document.getElementById('cnpj').value.replace(/\D/g, '');
       if (cnpj.length === 14) {
         try {
-          const res = await fetch(`https://api.allorigins.win/get?url=${encodeURIComponent('https://receitaws.com.br/v1/cnpj/' + cnpj)}`);
-          const wrapper = await res.json();
-          const data = JSON.parse(wrapper.contents);
+        const res = await fetch(`https://api.allorigins.win/raw?url=${encodeURIComponent(scriptURL)}`, {
+  method: "POST",
+  body: JSON.stringify(dados),
+  headers: { "Content-Type": "application/json" }
+});
+
 
           if (data.status === 'OK') {
             document.getElementById('razaoSocial').value = data.nome;
